--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "webpack-dev-server": "^4.11.1"
   },
   "dependencies": {
+    "@types/google.maps": "^3.58.1",
     "dotenv": "^16.4.5"
   }
 }
