--- a/package.json
+++ b/package.json
@@ -22,6 +22,14 @@
   },
   "dependencies": {
     "@types/google.maps": "^3.58.1",
-    "dotenv": "^16.4.5"
+    "axios": "^1.7.7",
+    "buffer": "^6.0.3",
+    "crypto-browserify": "^3.12.0",
+    "dotenv": "^16.4.5",
+    "os-browserify": "^0.3.0",
+    "path-browserify": "^1.0.1",
+    "process": "^0.11.10",
+    "stream-browserify": "^3.0.0",
+    "vm-browserify": "^1.1.2"
   }
 }
