--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "Pawel Werbowy",
   "license": "MIT",
   "devDependencies": {
+    "html-webpack-plugin": "^5.6.0",
     "ts-loader": "^9.4.2",
     "typescript": "^4.9.5",
     "webpack": "^5.75.0",
