--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
   "author": "Pawel Werbowy",
   "license": "MIT",
   "devDependencies": {
+    "@types/express": "^4.17.21",
+    "@types/node": "^22.7.5",
     "html-webpack-plugin": "^5.6.0",
     "ts-loader": "^9.4.2",
+    "ts-node": "^10.9.2",
     "typescript": "^4.9.5",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1",
@@ -27,6 +30,7 @@
     "buffer": "^6.0.3",
     "crypto-browserify": "^3.12.0",
     "dotenv": "^16.4.5",
+    "express": "^4.21.1",
     "os-browserify": "^0.3.0",
     "path-browserify": "^1.0.1",
     "process": "^0.11.10",
