--- a/package.json
+++ b/package.json
@@ -16,12 +16,13 @@
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/node": "^22.7.5",
+    "dotenv-webpack": "^8.1.0",
     "html-webpack-plugin": "^5.6.0",
-    "ts-loader": "^9.4.2",
+    "ts-loader": "^9.5.1",
     "ts-node": "^10.9.2",
     "typescript": "^4.9.5",
-    "webpack": "^5.75.0",
-    "webpack-cli": "^5.0.1",
+    "webpack": "^5.95.0",
+    "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.11.1"
   },
   "dependencies": {
